--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-hook-form": "^7.31.3",
     "react-router-dom": "^6.3.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.1.3"
