--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "react-dom": "^18.0.0",
     "react-hook-form": "^7.31.3",
     "react-redux": "^8.0.2",
+    "react-redux-firebase": "^3.11.0",
     "react-router-dom": "^6.3.0",
     "redux": "^4.2.0",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-firestore": "^1.0.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.1.3"
   },
