--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
   },
   "dependencies": {
     "firebase": "^9.8.2",
+    "history": "^5.3.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-hook-form": "^7.31.3",
     "react-redux": "^8.0.2",
     "react-redux-firebase": "^3.11.0",
-    "react-router-dom": "^6.3.0",
+    "react-router-dom": "^5.2.0",
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-firestore": "^1.0.0",
