--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "firebase": "^9.8.2",
     "history": "^5.3.0",
     "react": "^18.0.0",
+    "react-color": "^2.19.3",
     "react-dom": "^18.0.0",
     "react-hook-form": "^7.31.3",
     "react-redux": "^8.0.2",
