--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "firebase": "^9.8.2",
     "history": "^5.3.0",
+    "moment": "^2.29.3",
     "react": "^18.0.0",
     "react-color": "^2.19.3",
     "react-dom": "^18.0.0",
